# untitled

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.production.yaml  docker-compose.yaml
.github/: dependabot.yaml
.github/workflows/: ci.yaml
app/: Cargo.toml  Dockerfile
app/web/: Cargo.toml
app/web/src/: content_security_policy.rs  context.rs  main.rs
app/web/src/pages/: healthcheck.rs  mod.rs  page.rs
app/web/src/pages/feed/: mod.rs  view.rs  view_item.rs  view_item_test.rs  view_test.rs
app/web/src/pages/self_service/: login.rs  login_test.rs  logout.rs  logout_test.rs  mod.rs  register.rs  register_test.rs
tools/commitlint/: Dockerfile  package-lock.json  package.json
tools/editorconfig-checker/: Dockerfile  package-lock.json  package.json
