[package]
name = "web"
version = "0.1.0"
authors = ["Sorin Davidoi <sorin@sorin-davidoi.com>"]
edition = "2018"

[dependencies]
maud = { version = "0.22.2", default-features = false }
once_cell = { version = "1.8.0", default-features = false }
reqwest = { version = "0.11.4", default-features = false, features = ["native-tls", "stream"] }
rocket = { version = "0.5.0-rc", default-features = false }
rss = { version = "1.10.0", default-features = false }

[dev-dependencies]
mockito = { version = "0.30.0", default-features = false }
